site/styles/layouts/theme.css
/* ... */
.theme-card {
  background-color: var(--color-primary);
  color: var(--color-on-primary);
  --color-headline-override: var(--color-on-primary);
  --color-on-background: var(--color-on-primary);
}

.theme-clay {
  background-color: #b3876b;
  color: var(--color-on-primary-light);
  --color-headline-override: var(--color-on-primary-light);
  --color-p-override: var(--color-on-primary-light);
  --color-on-button: var(--color-on-primary-light);
}

.theme-olive {
  background-color: #8d9a76;
  color: var(--color-on-primary-light);
  --color-headline-override: var(--color-on-primary-light);
  --color-p-override: var(--color-on-primary-light);
  --color-on-button: var(--color-on-primary-light);
}

.theme-beige {
  background-color: #d3c4a3;
  color: var(--color-on-background-light);
  --color-headline-override: var(--color-on-background-light);
  --color-on-btn: var(--color-on-background-light);
  --color-p-override: var(--color-on-background-light);
}

.theme-rust {
  background-color: #a55a4e;
  color: var(--color-on-primary-light);
  --color-headline-override: var(--color-on-primary-light);
  --color-p-override: var(--color-on-primary-light);
  --color-on-button: var(--color-on-primary-light);
}

.theme-slate {
  background-color: #767f8b;
  color: var(--color-on-primary-light);
  --color-headline-override: var(--color-on-primary-light);
  --color-p-override: var(--color-on-primary-light);
  --color-on-button: var(--color-on-primary-light);
}

.theme-primary {
  background-color: var(--color-primary-light);
  color: var(--color-on-primary-light);

  --color-primary: var(--color-on-primary-light);
  --color-on-primary: var(--color-primary-light);
  --color-primary-container: var(--color-on-primary-light);
  --color-on-primary-container: var(--color-primary-light);
  --color-secondary: var(--color-on-primary-light);
  --color-on-secondary: var(--color-on-primary-light);
  --color-secondary-container: var(--color-on-primary-light);
  --color-on-secondary-container: var(--color-secondary-light);
  --color-tertiary: var(--color-on-primary-light);
  --color-on-tertiary: var(--color-on-primary-light);
  --color-tertiary-container: var(--color-on-primary-light);
  --color-on-tertiary-container: var(--color-tertiary-light);
  --color-outline: var(--color-on-primary-light);
  --color-outline-variant: var(--color-on-primary-light);
  --color-background: var(--color-primary-light);
  --color-on-background: var(--color-on-primary-light);
  --color-surface: var(--color-primary-light);
  --color-on-surface: var(--color-on-primary-light);

  .btn.secondary {
    background: transparent;
    color: var(--color-on-primary-light);
    border-color: var(--color-on-primary-light);
  }
}

.theme-primary-container {
  background-color: var(--color-primary-container);
  color: var(--color-on-primary-container);

  --color-badge-primary: var(--color-primary);
  --color-on-badge-primary: var(--color-on-primary);
  --color-secondary-container: var(--color-secondary);
  --color-on-secondary-container: var(--color-on-secondary);
  --color-tertiary-container: var(--color-tertiary);
  --color-on-tertiary-container: var(--color-on-tertiary);
  --color-outline: var(--color-on-primary-container);
  --color-outline-variant: var(--color-on-primary-container);
  --color-background: var(--color-primary-container);
  --color-on-background: var(--color-on-primary-container);
  --color-surface: var(--color-primary-container);
  --color-on-surface: var(--color-on-primary-container);
}

.theme-secondary {
  background-color: var(--color-secondary-light);
  color: var(--color-on-secondary-light);

  --color-primary: var(--color-on-secondary-light);
  --color-on-primary: var(--color-secondary-light);
  --color-primary-container: var(--color-on-secondary-light);
  --color-on-primary-container: var(--color-primary-light);
  --color-secondary-container: var(--color-on-secondary-light);
  --color-on-secondary-container: var(--color-secondary-light);
  --color-secondary: var(--color-on-secondary-light);
  --color-on-secondary: var(--color-on-secondary-light);
  --color-secondary-container: var(--color-on-secondary-light);
  --color-on-secondary-container: var(--color-secondary-light);
  --color-tertiary: var(--color-on-secondary-light);
  --color-on-tertiary: var(--color-on-secondary-light);
  --color-tertiary-container: var(--color-on-secondary-light);
  --color-on-tertiary-container: var(--color-tertiary-light);
  --color-outline: var(--color-on-secondary-light);
  --color-outline-variant: var(--color-on-secondary-light);
  --color-background: var(--color-secondary-light);
  --color-on-background: var(--color-on-secondary-light);
  --color-surface: var(--color-secondary-light);
  --color-on-surface: var(--color-on-secondary-light);
}

.theme-secondary-container {
  background-color: var(--color-secondary-container);
  color: var(--color-on-secondary-container);

  --color-badge-secondary: var(--color-secondary);
  --color-on-badge-secondary: var(--color-on-secondary);
  --color-primary: var(--color-secondary);
  --color-on-primary: var(--color-on-secondary);
  --color-primary-container: var(--color-primary);
  --color-on-primary-container: var(--color-on-primary);
  --color-tertiary-container: var(--color-tertiary);
  --color-on-tertiary-container: var(--color-on-tertiary);
  --color-outline: var(--color-on-secondary-container);
  --color-outline-variant: var(--color-on-secondary-container);
  --color-background: var(--color-secondary-container);
  --color-on-background: var(--color-on-secondary-container);
  --color-surface: var(--color-secondary-container);
  --color-on-surface: var(--color-on-secondary-container);
}
/* ... */

